# channelguessr

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.py  fly.toml  models.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  fly-deploy.yml
bot/: main.py
bot/commands/: game.py
bot/events/: message.py  reaction.py
bot/services/: game_service.py  message_selector.py  scoring_service.py
db/: database.py
db/migrations/: 001_initial.sql  002_add_author_guess.sql  003_add_timer_expiration.sql
docs/: DESIGN.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
scripts/: setup-dev.sh
tests/: conftest.py  test_database.py  test_formatting.py  test_game_service.py  test_message_selector.py  test_scoring.py  test_snowflake.py  test_time_parsing.py
utils/: discord_utils.py  formatting.py  snowflake.py
