[project]
name = "discord-guessr"
version = "0.1.0"
description = "A Discord bot game where players guess which channel a message came from"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "discord.py>=2.3.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "db*", "utils*"]
exclude = ["tests*"]

[tool.setuptools]
py-modules = ["config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
