[project]
name = "channelguessr"
version = "0.1.0"
description = "A Discord bot game where players guess which channel a message came from"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "discord.py>=2.3.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "db*", "utils*"]
exclude = ["tests*"]

[tool.setuptools]
py-modules = ["config", "models"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
